--- a/ansible.yaml
+++ b/ansible.yaml
@@ -7,22 +7,33 @@
   vars:
     full_name: "Michael Savin"
     ansible_distribution: ["Ubuntu", "Debian", "RHEL", "CentOS"]
-    practice: ["DevOps", "IaC", "CI/CD/CD", "DaC"]
+    practice: ["SRE", "DevOps", "IaC", "CI/CD", "DaC"]
     ssh_public_key: https://github.com/jtprogru.keys
     instruments: 
-      - configuration_managment: ["Ansible", "SaltStack"]
-      - version_control: ["GitHub", "GitLab", "Bitrbucket"]
-      - task_manager: ["Jira", "Trello"]
-      - monitoring: ["Zabbix", "Prometheus", "Grafana"]
-      - documentation: ["Confluence", "GiLab/GitHub Wiki", "Notion"]
-      - virtualisation: ["Proxmox", "VMware"]
-      - containerisation: ["Docker", "LXC"]
+      - type: "configuration_managment"
+        stack: ["Ansible", "SaltStack"]
+      - type: "version_control"
+        stack: ["GitHub", "GitLab", "Bitrbucket"]
+      - type: "task_manager"
+        stack: ["Issues", "Jira", "Trello"]
+      - type: "monitoring"
+        stack: ["Prometheus", "Zabbix", "Grafana"]
+      - type: "documentation"
+        stack: ["Confluence", "GiLab/GitHub Wiki", "Notion"]
+      - type: "virtualisation"
+        stack: ["Proxmox", "VMware"]
+      - type: "containerisation"
+        stack: ["Docker", "LXC"]
     contacts:
       blog: "https://jtprog.ru"
-      full_ru_cv: "https://savinmi.ru/"
-      email: "mail@jtprog.ru"
-      telegram: "@jtprogru"
-      twitter: "@jtprogru"
+      full_cv:
+        - lang: "en"
+          url: "https://s11l.me"
+        - lang: "ru"
+          url: "https://savinmi.ru/"
+      email: "mail[at]jtprog[dot]ru"
+      telegram: "[at]jtprogru"
+      twitter: "[at]jtprogru"
 
   roles:
     - "{{ become_user }}.sre"
