--- a/ansible.yaml
+++ b/ansible.yaml
@@ -6,31 +6,22 @@
 
   vars:
     full_name: "Michael Savin"
-    ansible_distribution: ["Ubuntu", "Debian", "RHEL", "CentOS"]
-    practice: ["SRE", "DevOps", "IaC", "CI/CD", "DaC"]
+    ansible_distribution: [ "Ubuntu", "Debian", "RHEL", "CentOS" ]
+    practice: [ "SRE", "DevOps", "IaC", "CI/CD", "DaC" ]
     ssh_public_key: https://github.com/jtprogru.keys
     instruments: 
-      - type: "configuration_managment"
-        stack: ["Ansible", "SaltStack"]
-      - type: "version_control"
-        stack: ["GitHub", "GitLab", "Bitrbucket"]
-      - type: "task_manager"
-        stack: ["Issues", "Jira", "Trello"]
-      - type: "monitoring"
-        stack: ["Prometheus", "Zabbix", "Grafana"]
-      - type: "documentation"
-        stack: ["Confluence", "GiLab/GitHub Wiki", "Notion"]
-      - type: "virtualisation"
-        stack: ["Proxmox", "VMware"]
-      - type: "containerisation"
-        stack: ["Docker", "LXC"]
+      - { type: "configuration_managment", stack: [ "Ansible", "SaltStack" ] }
+      - { type: "version_control", stack: [ "GitHub", "GitLab", "Bitrbucket" ] }
+      - { type: "task_manager", stack: [ "Issues", "Jira", "Trello" ] }
+      - { type: "monitoring", stack: [ "Prometheus", "Zabbix", "Grafana" ] }
+      - { type: "documentation", stack: [ "Confluence", "GiLab/GitHub Wiki", "Notion" ] }
+      - { type: "virtualisation", stack: [ "Proxmox", "VMware" ] }
+      - { type: "containerisation", stack: [ "Docker", "LXC" ] }
     contacts:
       blog: "https://jtprog.ru"
       full_cv:
-        - lang: "en"
-          url: "https://s11l.me"
-        - lang: "ru"
-          url: "https://savinmi.ru/"
+        - { lang: "en", url: "https://s11l.me" }
+        - { lang: "ru", url: "https://savinmi.ru" }
       email: "mail[at]jtprog[dot]ru"
       telegram: "[at]jtprogru"
       twitter: "[at]jtprogru"
