--- a/ansible.yaml
+++ b/ansible.yaml
@@ -8,7 +8,7 @@
     full_name: "Michael Savin"
     ansible_distribution: [ "Ubuntu", "Debian", "RHEL", "CentOS" ]
     practice: [ "SRE", "DevOps", "IaC", "CI/CD", "DaC" ]
-    ssh_public_key: https://github.com/jtprogru.keys
+    ssh_public_key: "https://github.com/jtprogru.keys"
     instruments: 
       - { type: "configuration_managment", stack: [ "Ansible", "SaltStack" ] }
       - { type: "version_control", stack: [ "GitHub", "GitLab", "Bitrbucket" ] }
